--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "eslint": "^3.14.0",
-    "eslint-config-airbnb-base": "^11.0.1"
+    "eslint-config-airbnb-base": "^11.0.1",
+    "eslint-plugin-import": "^2.2.0"
   }
 }
